--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.4.0
+  font_awesome_flutter: ^8.5.0
   intl: ^0.15.8
+
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,14 @@ flutter:
   fonts:
     - family: Montserrat
       fonts:
-        - asset: assets/fonts/Montserrat-Regular.ttf  
+        - asset: assets/fonts/Montserrat-Regular.ttf
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf 
+        - asset: assets/fonts/OpenSans-Bold.ttf
+        - asset: assets/fonts/OpenSans-Semibold.ttf
+          weight: 600
+
   # fonts:
   #   - family: Schyler
   #     fonts:
