--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,22 +22,19 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.5.0
-  intl: ^0.15.8
-
+  cupertino_icons: ^1.0.3
+  font_awesome_flutter: ^9.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart pa]rt of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -45,10 +42,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/monstera.png
-   - assets/images/aloe_vera.png
-   - assets/images/bird_of_paradise.png
-   - assets/images/cat_palm.png
+    - assets/images/monstera.png
+    - assets/images/aloe_vera.png
+    - assets/images/bird_of_paradise.png
+    - assets/images/cat_palm.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -67,7 +64,7 @@ flutter:
         - asset: assets/fonts/Montserrat-Regular.ttf
     - family: OpenSans
       fonts:
-        - asset: assets/fonts/OpenSans-Regular.ttf 
+        - asset: assets/fonts/OpenSans-Regular.ttf
         - asset: assets/fonts/OpenSans-Bold.ttf
         - asset: assets/fonts/OpenSans-Semibold.ttf
           weight: 600
